# meillionen

./: .buildinfo  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  concepts.html  docker-compose.yml  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
.binder/: environment.yml  requirements.txt
.github/: dependabot.yml
.github/workflows/: deploy-book.yml  test.yml
_sources/: getting_started.md
_sources/api/: python.md
_sources/example/: build_overland_flow.md  index.md  overland_simplecrop_workflow.ipynb  overland_simplecrop_workflow.md
api/: python.html
docs/: _config.yml  _toc.yml  concepts.md  getting_started.md
docs/api/: python.md
docs/example/: build_overland_flow.md  overland_simplecrop_workflow.md
example/: build_overland_flow.html  index.html  overland_simplecrop_workflow.html
examples/: Dockerfile
examples/crop-pipeline/: pipeline.py
examples/crop-pipeline/meillionen-mt-derive/: Cargo.toml
examples/crop-pipeline/overlandflow/: Dockerfile  model.py  pyproject.toml
examples/crop-pipeline/overlandflow/overlandflow/: __init__.py
examples/crop-pipeline/overlandflow/overlandflow_omf/: __init__.py  cli.py  model.py
examples/crop-pipeline/overlandflow/tests/: test_main.py
examples/crop-pipeline/simplecrop/: .gitignore  Cargo.toml  Dockerfile  README.md  cli.py  client.py  environment.yml  pyproject.toml
examples/crop-pipeline/simplecrop/data/: daily.feather
examples/crop-pipeline/simplecrop/data/data/: simplecrop
examples/crop-pipeline/simplecrop/data/input/: soil.inp
examples/crop-pipeline/simplecrop/data/output/: plant.out  soil.out  wbal.out
examples/crop-pipeline/simplecrop/simplecrop/: .gitignore  build.sh  test.sh
examples/crop-pipeline/simplecrop/simplecrop/include/: SimpleCrop.h
examples/crop-pipeline/simplecrop/simplecrop/src/: Main.f03  PlantCLI.f03  PlantComponent.f03  SoilCLI.f03  SoilComponent.f03  WeatherCLI.f03
examples/crop-pipeline/simplecrop/simplecrop_cli/: __init__.py
examples/crop-pipeline/simplecrop/simplecrop_omf/: __init__.py  cli.py  io.py  model.py
examples/crop-pipeline/simplecrop/src/: data.rs  lib.rs  model.rs
examples/crop-pipeline/simplecrop/tests/: test_input.py
meillionen-docs/: _config.yml  _toc.yml  concepts.md  environments.md  getting_started.md  index.md  intro.md  references.bib  requirements.txt  roadmap.ipynb
meillionen-docs/api/: python.md
meillionen-docs/example/: build_overland_flow.md  overland_simplecrop_workflow-new.md  overland_simplecrop_workflow.ipynb  overland_simplecrop_workflow.md
meillionen-mt/: Cargo.toml
meillionen-mt-derive/: Cargo.toml
meillionen-mt-derive/src/: lib.rs
meillionen-mt-python/: Cargo.toml  README.md  pyproject.toml  simplecrop.py
meillionen-mt-python/data/: .gitignore  swd.nc
meillionen-mt-python/meillionen/: __init__.py  app.py  client.py  exceptions.py  experiment.py  function.py  handlers.py  io.py  pymt.py  registry.py  resource.py  response.py  server.py  settings.py  trace.py
meillionen-mt-python/meillionen/interface/: ClassInterface.py  FunctionInterface.py  MethodRequest.py  ModuleInterface.py  Resource.py  Schema.py  _ClassInterface.py  _FunctionInterface.py  _MethodRequest.py  _ModuleInterface.py  _Resource.py  _Schema.py  base.py  bytesio.py  class_interface.py  method_interface.py  method_request.py  module_interface.py  mutability.py  resource.py  schema.py  wrappers.py
meillionen-mt-python/meillionen/io/: xarray.py
meillionen-mt-python/src/: array.rs  lib.rs
meillionen-mt-python/test/: __init__.py
meillionen-mt-python/tests/: common.py  test_handlers.py  test_interface.py  test_io.py  test_partition.py  test_resource.py
meillionen-mt/src/: extension_columns.rs  lib.rs  model.rs  schema.rs
meillionen-mt/src/arg/: base.rs  mod.rs  req.rs  resource.rs  schema.rs  validation.rs
meillionen-store-netcdf/: Cargo.toml  netcdf-store-put.nc  netcdf-store-retrieve.nc
meillionen-store-netcdf/src/: lib.rs
notebooks/: Model.ipynb  overlandflow.ipynb  presentation.ipynb  rise.css  simplecrop_cli.ipynb  weather.txt
notebooks/.ipynb_checkpoints/: Model-checkpoint.ipynb
overlandflow/: requirements.txt
protos/: module_model_service.proto
python/: README.md  environment.yml  pyproject.toml
python/meillionen/: .gitignore  client.py  exceptions.py  resource.py  server.py  settings.py
python/meillionen/interface/: _FunctionInterface.py  _MethodRequest.py  _MethodResponse.py  _MethodResponseError.py  _MethodResponseSuccess.py  _MethodResponseType.py  _Mutability.py  __init__.py  base.py  class_interface.py  method_interface.py  method_request.py  method_response.py  method_response_error.py  method_response_success.py  module_interface.py  mutability.py  resource.py  schema.py
python/meillionen/service/: client.py  module_model_service_pb2.py  module_model_service_pb2_grpc.py  server.py
python/tests/: common.py  test_io.py  test_resource.py
python/tests/data/: soil.feather  yields.feather
requirements/: base.txt  wheels.txt
schema/: class_interface.fbs  class_request.fbs  function_interface.fbs  method_request.fbs  method_response.fbs  module_interface.fbs  resource.fbs  schema.fbs
simplecrop-cli/: Cargo.toml  Dockerfile  README.md  build.sh  cli.py  environment.yml  netcdf-dim-iter.nc  netcdf-var-access.nc
simplecrop-cli-python/: Cargo.toml  README.md  data.nc  environment.yml
simplecrop-cli-python/check_installed/: check_installed.py
simplecrop-cli-python/src/: data.rs  dataframes.rs  lib.rs  model.rs
simplecrop-cli-wrapper/: Cargo.toml  README.md
simplecrop-cli-wrapper/data/: plant.inp
simplecrop-cli-wrapper/src/: lib.rs
simplecrop-cli/simplecrop_cli/: __init__.py
simplecrop-cli/src/: data.rs  dataframes.rs  lib.rs  model.rs
simplecrop-core/: Cargo.toml
simplecrop-core/src/: lib.rs
simplecrop-lib/: Cargo.toml
simplecrop-lib-wrapper/: Cargo.toml  README.md  build.rs
simplecrop-plant/: Cargo.toml  build.rs
simplecrop-soil/: Cargo.toml  build.rs
simplecrop-weather/: Cargo.toml  build.rs
(+17 files in other folders)
