[package]
name = "meillionen-mt-python"
version = "0.1.0"
authors = ["Calvin Pritchard <pritchard.calvin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.maturin]
requires-dist = ['pyarrow', 'netCDF4', 'numpy', 'pandas', 'sh']

[dependencies]
meillionen-mt = { path = "../meillionen-mt", version = "0.1.0" }
pyo3 = "0.13.2"
serde = "1.0.124"
pythonize = "0.13.0"
serde_json = "1.0"

[lib]
name = 'meillionen'
crate-type = ['cdylib', 'rlib']