[package]
name = "meillionen-mt"
version = "0.1.0"
authors = ["Calvin Pritchard <pritchard.calvin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "5.2.0"
clap = "2.33"
flatbuffers = "2.0.0"
itertools = "0.10.0"
json = "0.12.4"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = "1.0"
stable-eyre = "0.2.2"
thiserror = "1.0.24"
typetag = "0.1.7"
