[package]
name = "meillionen-store-netcdf"
version = "0.1.0"
authors = ["Calvin Pritchard <pritchard.calvin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "2.0.0"
chrono = ">=0.4.19"
itertools = ">=0.9.0"
lazy_static = "1.4.0"
netcdf = "0.5.2"
polars = "0.8.1"
thiserror = "1.0.20"

[features]
default = ['netcdf/static']