[tool.poetry]
name = "meillionen"
version = "0.1.0"
description = "A model interface serialization and rpc framework"
authors = ["Calvin Pritchard <calvin.pritchard@asu.edu>"]
license = "MIT"
packages = [
    { include = "meillionen" },
]

[tool.poetry.dependencies]
python = "^3.8"
flatbuffers = "^2.0"
pyarrow = "^5.0.0"
pydantic = "^1.8.2"
netCDF4 = "^1.5.7"
xarray = "^0.19.0"
landlab = "^2.3.0"
prefect = {version = "^0.15.6", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
jupyter-book = "^0.11.3"
ghp-import = "^2.0.2"

[tool.poetry.extras]
prefect = ["prefect"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
