[package]
name = "simplecrop-cli-python"
version = "0.1.0"
authors = ["Calvin Pritchard <pritchard.calvin@gmail.com>"]
edition = "2018"

[package.metadata.maturin]
requires-dist = ['numpy', 'pandas']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meillionen-mt = { path = "../meillionen-mt" }
meillionen-mt-derive = { path = "../meillionen-mt-derive" }
pyo3 = "0.11"
netcdf = "0.5.1"
numpy = "0.11.0"
ndarray = "0.13"
chrono = ">=0.4"
lazy_static = "1.4"

[lib]
name = 'simplecrop_cli_python'
crate-type = ['cdylib', 'rlib']

[features]
default = ["pyo3/extension-module", "netcdf/static"]