[package]
name = "simplecrop-cli"
version = "0.1.0"
authors = ["Calvin Pritchard <pritchard.calvin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "1.0"
chrono = "0.4"
lazy_static = "1.4.0"
simplecrop-core = { path = "../simplecrop-core" }
tempfile = "3.1.0"

[build-dependencies]
bindgen = "0.54.1"