[package]
name = "simplecrop-lib"
version = "0.1.0"
authors = ["Calvin Pritchard <pritchard.calvin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simplecrop-core = { path = "../simplecrop-core" }

[build-dependencies]
bindgen = "0.54.1"