[package]
name = "meillionen-mt-derive"
version = "0.1.0"
authors = ["Calvin Pritchard <pritchard.calvin@gmail.com>"]
edition = "2018"

[lib]
name = 'meillionen_mt_derive'
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meillionen-mt = { path = "../../meillionen-mt" }
proc-macro2 = "1.0.19"
quote = "1.0.7"
syn = "1.0.39"
