[tool.poetry]
name = "overlandflow-omf"
version = "0.1.0"
description = "A cli wrapper around landlab's overlandflow"
authors = ["Calvin Pritchard <calvin.pritchard@asu.edu>"]
license = "MIT"
repository = "https://github.com/openmodelingfoundation/meillionen.git"

[tool.poetry.dependencies]
python = "^3.9"
pyarrow = "^6.0.0"
pandas = "^1.3.3"
xarray = "^0.20.0"
landlab = "^2.3.0"
meillionen = { path = "../../../python", develop = true }

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.scripts]
overlandflow-omf = "overlandflow_omf.model:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
