[package]
name = "simplecrop-cli"
version = "0.1.0"
authors = ["Calvin Pritchard <pritchard.calvin@gmail.com>"]
edition = "2018"

[package.metadata.maturin]
requires-dist = ['numpy', 'pandas', 'pyarrow', 'xarray']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "3.0.0"
eyre = "0.6.5"
itertools = "0.10.0"
meillionen-mt = { path = "../../../meillionen-mt", version = "0.1.0" }
pyo3 = "0.13.2"
serde = "1.0"
serde_json = "1.0.64"

[lib]
name = 'simplecrop_cli'
crate-type = ['cdylib', 'rlib']