[tool.poetry]
name = "simplecrop-omf"
version = "0.1.0"
description = "A meillionen simplecrop wrapper around simplecrop"
authors = ["Calvin Pritchard <calvin.pritchard@asu.edu>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/openmodelingfoundation/meillionen.git"

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: Meillionen",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Agriculture",
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.0"
pandas = "^1.3.2"
pyarrow = "^6.0.0"
sh = "^1.14.2"
meillionen = { path = "../../../python", develop = true }

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipython = "^7.27.0"

[tool.poetry.scripts]
simplecrop-omf = 'simplecrop_omf.model:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
